--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@smastrom/react-rating": "^1.5.0",
+    "@tanstack/react-query": "^5.59.13",
     "axios": "^1.7.7",
     "firebase": "^10.14.1",
     "localforage": "^1.10.0",
